# scheme-repl

./: README.md  scheme-repl.cabal
app/: Main.hs
scheme-src/: stdlib.scm
src/: Data.hs  Evaluation.hs  Lib.hs  Parsing.hs
src/Evaluation/: IOPrimitives.hs  Primitives.hs
test/: Spec.hs  TestArbitraryData.hs  TestEvaluation.hs  TestParsing.hs  TestPrimitives.hs
test/TestPrimitives/: NumberTests.hs  Utils.hs
