name:                scheme-repl
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/davideGiovannini/scheme-repl#readme
license:             BSD3
license-file:        LICENSE
author:              Davide Giovannini
maintainer:          example@example.com
copyright:           2016 Davide Giovannini
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:       Parsing
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable scheme-repl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scheme-repl
  default-language:    Haskell2010

test-suite scheme-repl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src test
  main-is:             Spec.hs
  build-depends:       base
                     , scheme-repl
                     , QuickCheck
                     , hspec
                     , parsec
  other-modules:       TestParsing
                     , TestEvaluation
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/scheme-repl
